--- a/index.html
+++ b/index.html
@@ -1,20 +1,115 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>message for you</title>
-    <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8">
+  <title>Для Карины</title>
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"><link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-    <div class="wrapper">
-        <h2 class="question">Не желаешь ли погулять 31 декабря?</h2>
-        <img class="gif" alt="gif" src="https://media.giphy.com/media/wH4rY2nPnEnp6/giphy.gif"/> 
-        <div class="btn-group">
-            <button class="yes-btn">Yes</button>
-            <button class="no-btn">No</button>
+<!-- partial:index.partial.html -->
+<body>
+  <article>
+    <div class="envelope-container">
+      <div class="message message-1" id="message-1">
+        <h1>С днём святого Валентина!</h1>
+        <!--      <p>Sending a little something for you...</p>        -->
+      </div>
+      <div class="message message-2" id="message-2">
+        <h2>Lots of love!</h2>
+      </div>
+      <button class="close-btn" id="close-btn" onclick="toggleEnvelope()">Закрыть</button>
+      <button class="heart-btn" id="heart-btn" onclick="toggleEnvelope()">&#10084;
+        <span class="heart-btn-text">click</span>
+      </button>
+      <div class="envelope-flap">
+        <svg class="inner">
+          <polygon class="inner-polygon" id="inner-polygon" points="5,0 345,0 175,145" ></polygon>
+        </svg>
+        <svg class="outer" id="outer">
+          <polygon class="outer-polygon" points="5,150 345,150 175,0"></polygon>
+        </svg>
+        <div class="floating-hearts">
+          <div class="hearts-row row-10">
+            <div>
+              <i class="ri-heart-fill"></i>
+            </div>
+          </div>
+          <div class="hearts-row row-9">
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+          </div>
+          <div class="hearts-row row-8">
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+          </div>
+          <div class="hearts-row row-7">
+            <div><i class="ri-heart-fill"></i></div>            
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+          </div>
+          <div class="hearts-row row-6">
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+          </div>
+          <div class="hearts-row row-5">
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+          </div>
+          <div class="hearts-row row-4">
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+          </div>
+          <div class="hearts-row row-3">
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+          </div>
+          <div class="hearts-row row-2">
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+            <div><i class="ri-heart-fill"></i></div>
+          </div>
+          <div class="hearts-row row-1">
+            <div><i class="ri-heart-fill"></i></div>
+          </div>
         </div>
+      </div>
+      <div class="envelope-base"></div>
     </div>
-    <script src="script.js"></script>
+  </article>  
+</body>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
 </body>
 </html>
