--- a/index.html
+++ b/index.html
@@ -1,115 +1,163 @@
 <!DOCTYPE html>
-<html lang="ru" >
+<html lang="ru">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Для Карины</title>
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"><link rel="stylesheet" href="./style.css">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+  <title>For Karina</title>
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+  <!-- My Style -->
+  <link rel="stylesheet" href="./styles/main.css" />
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<body>
-  <article>
-    <div class="envelope-container">
-      <div class="message message-1" id="message-1">
-        <h1>С днём святого Валентина!</h1>
-        <!--      <p>Sending a little something for you...</p>        -->
-      </div>
-      <div class="message message-2" id="message-2">
-        <h2>Lots of love!</h2>
-      </div>
-      <button class="close-btn" id="close-btn" onclick="toggleEnvelope()">Закрыть</button>
-      <button class="heart-btn" id="heart-btn" onclick="toggleEnvelope()">&#10084;
-        <span class="heart-btn-text">click</span>
-      </button>
-      <div class="envelope-flap">
-        <svg class="inner">
-          <polygon class="inner-polygon" id="inner-polygon" points="5,0 345,0 175,145" ></polygon>
-        </svg>
-        <svg class="outer" id="outer">
-          <polygon class="outer-polygon" points="5,150 345,150 175,0"></polygon>
-        </svg>
-        <div class="floating-hearts">
-          <div class="hearts-row row-10">
-            <div>
-              <i class="ri-heart-fill"></i>
-            </div>
-          </div>
-          <div class="hearts-row row-9">
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-          </div>
-          <div class="hearts-row row-8">
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-          </div>
-          <div class="hearts-row row-7">
-            <div><i class="ri-heart-fill"></i></div>            
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-          </div>
-          <div class="hearts-row row-6">
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-          </div>
-          <div class="hearts-row row-5">
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-          </div>
-          <div class="hearts-row row-4">
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-          </div>
-          <div class="hearts-row row-3">
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-          </div>
-          <div class="hearts-row row-2">
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-            <div><i class="ri-heart-fill"></i></div>
-          </div>
-          <div class="hearts-row row-1">
-            <div><i class="ri-heart-fill"></i></div>
-          </div>
+
+    <audio class="song" loop autoplay>
+        <source src="./music/hbd.mpeg">
+        </source>
+        
+    </audio>
+
+    <div class="container">
+        <div class="one">
+            <h1 class="one">
+                Привет, 
+                <span id="name">Карина</span>
+            </h1>
+            <p class="two" id="greetingText"> Кстати, мне очень нравится твоё имя :D</p>
         </div>
-      </div>
-      <div class="envelope-base"></div>
+
+        <div class="three">
+            <p>Поздравляю тебя с днём рождения!</p>
+        </div>
+
+        <div class="four">
+            <div class="text-box">
+                <p class="hbd-chatbox">
+                Привет, поздравляю с днём рождения! Ну и с 8 Марта, раз уж так совпало) Тебе исполняется уже 17. С ума сойти. Годы летят, а ты также прекрасна, как и при первом нашем танце), и я говорю не только о внешности. Желаю тебе и дальше совершенствоваться, развиваться, и по жизни получать всё, о чём только не пожелаешь. Жизнь коротка, и надо прожить её так, чтоб было о чём вспомнить, но желательно в хорошем ключе) В общем, побольше тебе хороших эмоций, счастья, чтобы в доме всегда тебя всегда любили и ждали, чтоб экзамене по физике первый билет вытянула) Много чего ещё хочется добавить, но, думаю, через текст этих эмоций и мыслей грамотно не передать, поэтому, пожалуй, на этом закончу. Ещё раз, поздравляю!
+                </p>
+                <p class="fake-btn">></p>
+            </div>
+        </div>
+
+        <div class="five">
+            <p class="idea-1">Можно было сделать так,</p>
+            <p class="idea-2">Но я решил сделать по-другому.</p>
+            <p class="idea-3">
+                Я подумал, что хочу сделать что-то<br>
+                <strong>особенное</strong>
+                .
+            </p>
+            <p class="idea-4">Потому что,</p>
+            <p class="idea-5">
+                ты особенная
+                <span>:)</span>
+            </p>
+            <p class="idea-6">
+                <span>П</span>
+                <span>O</span>
+                <span>Э</span>
+                <span>Т</span>
+                <span>O</span>
+                <span>М</span>
+                <span>У</span>
+            </p>
+        </div>
+
+        <div class="six">
+            <img src="./img/karina_picture.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="img/hat.svg" alt="hat" class="hat" />
+            <div class="wish">
+                <h3 class="wish-hbd">С днём рождения!</h3>
+                <h5 id="wishText">Чтоб у тебя в жизни всё было не хорошо, а замечательно! ;)</h5>
+            </div>
+        </div>
+
+        <div class="seven">
+            <div class="baloons">
+                <img src="img/ballon2.svg" alt="" />
+                <img src="img/ballon1.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ballon1.svg" alt="" />
+                <img src="img/ballon2.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ballon2.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ballon1.svg" alt="" />
+                <img src="img/ballon2.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ballon2.svg" alt="" />
+                <img src="img/ballon1.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ballon2.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ballon1.svg" alt="" />
+                <img src="img/ballon2.svg" alt="" />
+                <img src="img/ballon1.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ballon1.svg" alt="" />
+                <img src="img/ballon2.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ballon2.svg" alt="" />
+                <img src="img/ballon1.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ballon2.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ballon1.svg" alt="" />
+                <img src="img/ballon2.svg" alt="" />
+                <img src="img/ballon1.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
+            </div>
+        </div>
+
+        <div class="eight">
+            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="20" cy="20" r="20" />
+            </svg>
+            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="20" cy="20" r="20" />
+            </svg>
+            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="20" cy="20" r="20" />
+            </svg>
+            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="20" cy="20" r="20" />
+            </svg>
+            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="20" cy="20" r="20" />
+            </svg>
+            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="20" cy="20" r="20" />
+            </svg>
+            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="20" cy="20" r="20" />
+            </svg>
+            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="20" cy="20" r="20" />
+            </svg>
+            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="20" cy="20" r="20" />
+            </svg>
+        </div>
+
+        <div class="nine">
+            <p>До встречи)</p>
+            <p id="replay">Можешь кликнуть СЮДА, чтобы посмотреть ещё раз.</p>
+            <p class="last-smile">:)</p>
+        </div>
     </div>
-  </article>  
-</body>
-<!-- partial -->
-  <script  src="./script.js"></script>
 
 </body>
+    <!-- Greensock -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <!-- Sweetalert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="application/javascript" src="./script/main.js"></script>
+
 </html>
