--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Привет, поздравляю с днём рождения! Ну и с 8 Марта, раз уж так совпало) Тебе исполняется уже 17. С ума сойти. Годы летят, а ты также прекрасна, как и при первом нашем танце), и я говорю не только о внешности. Желаю тебе и дальше совершенствоваться, развиваться, и по жизни получать всё, о чём только не пожелаешь. Жизнь коротка, и надо прожить её так, чтоб было о чём вспомнить, но желательно в хорошем ключе) В общем, побольше тебе хороших эмоций, счастья, чтобы в доме всегда тебя всегда любили и ждали, чтоб экзамене по физике первый билет вытянула) Много чего ещё хочется добавить, но, думаю, через текст этих эмоций и мыслей грамотно не передать, поэтому, пожалуй, на этом закончу. Ещё раз, поздравляю!
+                Привет, поздравляю с днём рождения! Ну и с 8 Марта, раз уж так совпало) Тебе исполняется уже 17. С ума сойти. Годы летят, а ты также прекрасна, как и при первом нашем танце), и я говорю не только о внешности. Желаю тебе и дальше совершенствоваться, развиваться, и по жизни получать всё, о чём только не пожелаешь. Жизнь коротка, и надо прожить её так, чтоб было о чём вспомнить, но желательно в хорошем ключе) В общем, побольше тебе положительных эмоций, счастья, чтобы в доме всегда тебя всегда любили и ждали, чтоб экзамене по физике первый билет вытянула) Много чего ещё хочется добавить, но, думаю, через текст этих эмоций и мыслей грамотно не передать, поэтому, пожалуй, на этом закончу. Ещё раз, поздравляю!
                 </p>
                 <p class="fake-btn">></p>
             </div>
