--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <div id="main">
           <p>Loading...</p>
        </div>
-       <div id="infdiv">Drag available units into the deployment area.<br/><br/>You win, when one of  your units gets to the green line at the top of the field.<br/><br/>Don't let enemies to reach your base.<br/><br/>Good luck, commander! May the force be with you!</div>
+       <div id="infdiv">Перетаскивай танчики на арену.<br/><br/>Побеждаешь, когда твой танк пересекает линию вверху поля боя.<br/><br/>Проигрываешь, если танки противника дойдут до твой стороны поля<br/><br/>Удачи!</div>
        <div id="log"></div>
        
        <div id="myModal" class="modal">
