--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ var startGame = function ()
                 modal.style.display = "none";
            } else {
               
-                p.innerHTML = 'Please, donate 100500 bucks to obtain this fabulous, innovative, wirelessly rechargeable, eco/vegan/gay friendly machine of death! <br/>Thank you!'; 
+                p.innerHTML = 'Если хотите разблокировать четвёртую ультрамегагиперпупермощную тачку, совершите перевод какого-угодно количества денежных средств на мой номер.<br/>Спасибо! И удачи!'; 
                 modal.style.width = c.width*0.8 + "px";
                 modal.style.marginLeft = c.width*0.1 + xo + "px";
                 modal.style.display = "block";
